PMA-54: fix gap

--- a/src/components/common/header/styles.module.scss
+++ b/src/components/common/header/styles.module.scss
@@ -98,7 +98,8 @@
   align-items: center;
   background: var(--color-white);
   box-shadow: var(--shadow);
-  padding: 10px 15px;
+  padding: 10px;
+  gap: 10px;
 }
 
 .user-menu-option:hover {
